--- a/newtab.html
+++ b/newtab.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bartender Tab</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="icon" href="icon.png">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <img src="icon-bartendertab.png" alt="Bartender Tab Icon" style="display: block; margin: 0 auto; width: 100px; height: 100px;">
 <div class="mini-search">
-            <input type="text" id="google-search-query" placeholder="Search Google">
+            <input type="text" id="google-search-query" placeholder="Search the web">
             <button id="search-google">Search</button>
         </div>
         <input type="text" id="search-input" class="form-control mb-4" placeholder="Search cocktail" oninput="searchCocktails()">
@@ -55,7 +55,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 BCTab.com - Bartender Tab</p>
+        <p>BCTab.com - Bartender Tab &copy; 2024</p>
     </footer>
 
     <div class="current-time" id="current-time"></div>
