--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <a class="nav-link" href="https://bartender.bctab.com/what-is">What Is</a>
             </nav>
             <a href="https://twitter.com/bctab" target="_blank" class="twitter-icon"><img src="icon-x.png" alt="Twitter Icon"></a>
-            <p class="mb-0">BCTab.com - Bartender Tab &copy; 2024</p>
+            <p class="mb-0">&copy; 2024 BCTab.com - Bartender Tab</p>
         </div>
     </footer>
 </body>
