--- a/newtab.html
+++ b/newtab.html
@@ -55,7 +55,7 @@
     </div>
 
     <footer>
-        <p>BCTab.com - Bartender Tab &copy; 2024</p>
+        <p>&copy; 2024 BCTab.com - Bartender Tab</p>
     </footer>
 
     <div class="current-time" id="current-time"></div>
