--- a/what-is.html
+++ b/what-is.html
@@ -9,7 +9,16 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://bartender.bctab.com/what-is">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="icon" href="icon-bartendertab.png">
+    <link rel="icon" href="favicon.ico">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B90XV0NN29"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B90XV0NN29');
+</script>
     <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
