--- a/what-is.html
+++ b/what-is.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What Is Bartender Tab?</title>
-    <meta name="description" content="Learn what Bartender Tab is and how it enhances your browsing experience.">
+    <meta name="description" content="Learn what Bartender Tab is">
     <meta name="author" content="BCTab">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://bartender.bctab.com/what-is">
