--- a/what-is.html
+++ b/what-is.html
@@ -190,8 +190,8 @@
                 <a class="nav-link" href="https://bctab.com/contact">Contact</a>
                 <a class="nav-link" href="https://bartender.bctab.com/what-is">What Is</a>
             </nav>
-            <a href="https://twitter.com/bctab" target="_blank" class="twitter-icon"><img src="icon-x.png" alt="Twitter Icon"></a>
-            <p class="mb-0">BCTab.com - Bartender Tab &copy; 2024</p>
+            <a href="https://twitter.com/bctabcom" target="_blank" class="twitter-icon"><img src="icon-x.png" alt="Twitter Icon"></a>
+            <p class="mb-0">B&copy; 2024 BCTab.com - Bartender Tab</p>
         </div>
     </footer>
 </body>
