--- a/newtab.html
+++ b/newtab.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B90XV0NN29"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PLDSGNK138"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-B90XV0NN29');
+  gtag('config', 'G-PLDSGNK138');
 </script>
     <style>
       body {
