--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     }
 
     .extension {
-      background-color: transparent !important;
-    }
+    background-color: transparent;
+}
 
     .extension-content h3,
     .extension-content p {
