--- a/what-is.html
+++ b/what-is.html
@@ -174,7 +174,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="extension-demo text-center mb-4">
-                    <img src="extension-demo.png" alt="Bartender Tab Demo" class="img-fluid">
+                    <img src="bartender-demo.png" alt="Bartender Tab Demo" class="img-fluid">
                     <p class="mt-2" style="font-size: 20px;">Check out the Bartender Tab in action!</p>
                 </div>
             </div>
