--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
       background-color: transparent;
     }
 
+    .extension {
+      background-color: transparent !important;
+    }
+
     .extension-content h3,
     .extension-content p {
       color: #fff;
@@ -124,6 +128,25 @@
       background-color: rgba(255, 255, 255, 0.1);
       color: #fff;
     }
+
+      .promotion {
+        font-size: 18px;
+      }
+
+      .extension-content {
+        padding: 10px;
+      }
+
+      .download-btn {
+        font-size: 12px;
+        padding: 8px 16px;
+      }
+
+      .corner-icons img {
+        width: 80px;
+        height: 80px;
+        margin-left: 5px;
+      }
   </style>
 </head>
 <body>
