--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     }
 
     .extension {
-      background-color: transparent !important;
+      background-color: transparent;
     }
 
     .extension-content h3,
@@ -147,6 +147,7 @@
         height: 80px;
         margin-left: 5px;
       }
+    }
   </style>
 </head>
 <body>
