--- a/index.html
+++ b/index.html
@@ -20,135 +20,108 @@
 
   gtag('config', 'G-PLDSGNK138');
 </script>
-    <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #fff;
-      margin: 0;
-      padding: 0;
-      background-image: url('bar-promo.png');
-      background-size: cover;
-      background-position: center;
-      overflow-x: hidden;
-    }
+   <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            background-image: url('bar-promo.png');
+            background-size: cover;
+            background-position: center;
+        }
 
-    header, footer {
-      padding: 20px;
-    }
+        header,
+        footer {
+            padding: 20px;
+        }
 
-    .site-title img {
-      width: 120px;
-      height: 120px;
-      margin-right: 10px;
-    }
+        .site-title img {
+            width: 120px;
+            height: 120px;
+            margin-right: 10px;
+        }
 
-    .promotion {
-      text-align: center;
-      padding: 20px;
-      font-size: 24px;
-    }
+        .promotion {
+            text-align: center;
+            padding: 20px;
+            font-size: 24px;
+        }
 
-    .extension-content {
-      padding: 20px;
-      text-align: center;
-      background-color: transparent;
-    }
+        .bartender-tab-section {
+            text-align: center;
+            margin-top: 50px; 
+        }
 
-    .extension {
-      background-color: transparent;
-    }
+        .bartender-tab-section h3,
+        .bartender-tab-section p {
+            color: #fff;
+        }
 
-    .extension-content h3,
-    .extension-content p {
-      color: #fff;
-    }
+        .download-btn {
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            font-size: 14px;
+            background-color: #007bff;
+            border: none;
+            color: #fff;
+        }
 
-    .download-btn {
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-      font-size: 14px;
-      display: inline-block;
-      margin-top: 20px;
-      background-color: #007bff;
-      border: none;
-      color: #fff;
-    }
+        .download-btn:hover {
+            opacity: 0.8;
+        }
 
-    .download-btn:hover {
-      opacity: 0.8;
-    }
+        .corner-icons {
+            position: absolute;
+            top: 25px;
+        }
 
-    .corner-icons {
-      position: absolute;
-      top: 25px;
-    }
+        .corner-icons.left {
+            left: 20px;
+        }
 
-    .corner-icons.left {
-      left: 20px;
-    }
+        .corner-icons.right {
+            right: 20px;
+        }
 
-    .corner-icons.right {
-      right: 20px;
-    }
+        .corner-icons img {
+            width: 120px;
+            height: 120px;
+            margin-left: 10px;
+        }
 
-    .corner-icons img {
-      width: 120px;
-      height: 120px;
-      margin-left: 10px;
-    }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+        }
 
-    footer {
-      text-align: center;
-      margin-top: 20px;
-    }
+        nav {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            padding: 20px;
+        }
 
-    nav {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-      padding: 20px;
-    }
+        nav a {
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+            text-decoration: none;
+            margin: 0 10px;
+            padding: 10px 20px;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            transition: background-color 0.3s, border-color 0.3s;
+        }
 
-    nav a {
-      color: #fff;
-      font-size: 16px;
-      font-weight: bold;
-      text-decoration: none;
-      margin: 0 10px;
-      padding: 10px 20px;
-      border: 2px solid #fff;
-      border-radius: 5px;
-      transition: background-color 0.3s, border-color 0.3s;
-    }
-
-    nav a:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-      color: #fff;
-    }
-
-      .promotion {
-        font-size: 18px;
-      }
-
-      .extension-content {
-        padding: 10px;
-      }
-
-      .download-btn {
-        font-size: 12px;
-        padding: 8px 16px;
-      }
-
-      .corner-icons img {
-        width: 80px;
-        height: 80px;
-        margin-left: 5px;
-      }
-    }
-  </style>
+        nav a:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <header class="container py-3">
@@ -166,18 +139,10 @@
         </div>
     </header>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="extension bg-secondary text-light p-4 mb-4">
-                    <div class="extension-content">
-                        <h3 class="mb-3">Bartender Tab</h3>
-                        <p class="mb-3">Discover new cocktail recipes every time you open a new tab!</p>
-                        <a href="#" class="btn btn-primary download-btn">Get for Chrome - Coming soon</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="bartender-tab-section">
+        <h3 class="mb-3">Bartender Tab</h3>
+        <p class="mb-3">Discover new cocktail recipes every time you open a new tab!</p>
+        <a href="#" class="btn btn-primary download-btn">Get for Chrome - Coming soon</a>
     </div>
 
     <footer class="mt-5 py-3">
