--- a/what-is.html
+++ b/what-is.html
@@ -142,7 +142,7 @@
     <header class="container py-3">
         <div class="d-flex justify-content-between align-items-center">
             <div class="site-title">
-                <a href="#"><img src="icon-bartendertab.png" alt="Bartender Tab Icon" class="img-fluid"></a>
+                <a href="https://bartender.bctab.com"><img src="icon-bartendertab.png" alt="Bartender Tab Icon" class="img-fluid"></a>
                 <div class="promotion">
                     <h1 class="font-weight-bold">What is Bartender Tab?</h1>
                 </div>
@@ -163,7 +163,7 @@
                         <p class="mb-3">Whether you're a seasoned mixologist or just starting to explore the world of cocktails, Bartender Tab provides inspiration and ideas for your next drink creation.</p>
                         <p class="mb-3">From classic cocktails to modern concoctions, Bartender Tab covers a wide range of drink recipes, ensuring there's something for everyone to enjoy.</p>
                         <p class="mb-3">Install Bartender Tab today and transform your browsing experience into a journey of cocktail discovery!</p>
-                        <a href="#" class="btn btn-primary download-btn">Get for Chrome</a>
+                        <a href="#" class="btn btn-primary download-btn">Get for Chrome - Coming Soon</a>
                     </div>
                 </div>
             </div>
