--- a/installation-message.html
+++ b/installation-message.html
@@ -28,10 +28,6 @@
         .icon {
             font-size: 48px;
             margin: 0 20px;
-            transition: transform 0.3s;
-        }
-        .icon:hover {
-            transform: scale(1.2);
         }
         .btn {
             background-color: #3498db;
@@ -54,10 +50,11 @@
         <h1>Thank You for Installing Bartender Tab!</h1>
         <p>Explore a variety of cocktail recipes with Bartender Tab.</p>
         <div class="icon-container">
-            <i class="fas fa-cocktail icon" style="color: #e67e22;" title="Cocktail"></i>
-            <i class="fas fa-lemon icon" style="color: #f1c40f;" title="Lemon"></i>
+            <i class="fas fa-cocktail icon" style="color: #e67e22;"></i>
+            <i class="fas fa-glass-martini-alt icon" style="color: #f1c40f;"></i>
         </div>
         <a href="https://bartender.bctab.com/newtab" class="btn">Open Bartender Tab</a>
     </div>
 </body>
 </html>
+
