--- a/what-is.html
+++ b/what-is.html
@@ -159,8 +159,7 @@
                 <div class="extension bg-secondary text-light p-4 mb-4">
                     <div class="extension-content">
                         <p class="mb-3">Bartender Tab is a Chrome browser extension designed to enhance your browsing experience by turning your new tab into a virtual bar.</p>
-                        <p class="mb-3">Every time you open a new tab in your browser, you'll be greeted with a curated selection of cocktail recipes, mixology tips, and beautiful images of cocktails.</p>
-                        <p class="mb-3">Whether you're a seasoned mixologist or just starting to explore the world of cocktails, Bartender Tab provides inspiration and ideas for your next drink creation.</p>
+                        <p class="mb-3">Every time you open a new tab in your browser, you'll be greeted with a curated selection of cocktail recipes and beautiful images of cocktails.</p
                         <p class="mb-3">From classic cocktails to modern concoctions, Bartender Tab covers a wide range of drink recipes, ensuring there's something for everyone to enjoy.</p>
                         <p class="mb-3">Install Bartender Tab today and transform your browsing experience into a journey of cocktail discovery!</p>
                         <a href="#" class="btn btn-primary download-btn">Get for Chrome - Coming Soon</a>
@@ -184,7 +183,7 @@
     <footer class="mt-5 py-3">
         <div class="container">
             <nav class="nav justify-content-center mb-3">
-                <a class="nav-link" href="https://bctab.com">BCTab.com</a>
+                <a class="nav-link" href="https://bctab.com">BCTab</a>
                 <a class="nav-link" href="https://bctab.com/privacy">Privacy</a>
                 <a class="nav-link" href="https://bctab.com/terms">Terms of Service</a>
                 <a class="nav-link" href="https://bctab.com/contact">Contact</a>
