--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bartender Tab</title>
     <meta name="description" content="Discover new cocktail recipes and mixology tips with Bartender Tab. Turn your new tab into a cocktail bar experience.">
-    <meta name="keywords" content="bartender tab, cocktail recipes, mixology tips, new tab experience">
+    <meta name="keywords" content="bartender tab, cocktail recipes, new tab">
     <meta name="author" content="BCTab">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://bartender.bctab.com">
